# Merlot

./: .gitignore  README.md  alembic.ini  pyproject.toml
merlot/: __init__.py  config.py  main.py  models.py  routes.py
merlot/config/: enum_types.py
merlot/database/: database.py
merlot/docs/: DDC.drawio
merlot/models/: __init__.py  atendimento.py  consulta.py  medico.py  models.py  paciente.py  prontuario.py
merlot/routes/: routes.py
merlot/schemas/: schemas.py
merlot/scripts_teste/: enviar_mensagem.py
merlot/service/: whatsapp.py
migrations/: env.py
migrations/versions/: 892734376653_init.py  ff1f26edd3e6_initial_migration.py
